Fixed gap in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --textShadowColor: -.1em .1em black;
     --backgroundShadowColor: -10px 10px black;
     --borderRadius: 0em;
+    --gap: 3em;
 }
 
   /******************************************
@@ -58,7 +59,7 @@ h3, h4 {
     flex-direction: column;
     height:100%;
     min-height: 75vh;
-    gap: 3em;
+    gap: var(--gap);
     justify-content: center;
 }
 
@@ -110,7 +111,7 @@ h1{
 
 textarea {
     width:100%;
-    font-size: 4vw;
+    font-size: var(--fontSize);
     text-align: left;
     padding: 0 1em;
     padding-top: 1em;
